# performance_management

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  setup.py
performance_management/: build_reports.py  check_accounting.py  check_all_links.py  check_meta.py  check_ws.py  check_ws_state.py  cleanup.py  create_link_final.py  create_page.py  create_user_ws.py  dump_html.py  fetch_html.py  final_polish.py  final_sync_check.py  fix_ws.py  force_sidebar_final.py  hooks.py  test_checklist.py  verify_all_fixes.py  verify_fix.py
performance_management/fixtures/: custom_field.json  custom_html_block.json  workspace.json
performance_management/performance_management/: dashboard_templates.py  setup.py
performance_management/performance_management/fixtures/: custom_html_block.json
performance_management/performance_management/services/: checklist_service.py
performance_management/performance_management/utils/: automation.py  create_dashboard.py  create_rep.py  dashboard_api.py  debug_ws.py  force_ws.py  permissions.py  scoring.py  whatsapp.py  whatsapp_automation.py
performance_management/scripts/archive/: check_notif.py  check_parent.py  debug_workspace.py  final_polish_v2.py  final_polish_v3.py  final_polish_v4.py  finalize_visibility.py  fix_charts.py  force_link.py  get_err.py  install_dashboards.py  test_emails.py  test_flags.py  test_team_report.py  update_parent_ws.py
performance_management/workspace/admin_dashboard/: admin_dashboard.json
performance_management/workspace_sidebar/: performance_management.json
(+36 files in other folders)
